--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Pong Game</title>
+  <link rel="stylesheet" type="text/css" href="./style.css">
   <script language="javascript" type="text/javascript" src='http://code.jquery.com/jquery-2.1.4.js'></script>
   <script type='text/javascript' src='./src/pong.js'></script>
 </head>
